got autocomplete to work. just need to add in some jquery to make sure it collapses/uncollapses whats in the input box

--- a/static/main.css
+++ b/static/main.css
@@ -19,6 +19,21 @@
 }
 
 /*
+ * typeahead css fixes
+ */
+
+.twitter-typeahead{
+	width: 100%;
+	padding-top: 5px;
+}
+.tt-dropdown-menu{
+	width: 100%;
+	padding-top: 5px;
+}
+.tt-hint{
+	padding-top: 15px;
+}
+/*
  * For editing values
  */
 
